fix(ui): SummaryItem - prevent delta value from wrapping

--- a/packages/ui/src/components/summary-item/summary-item.module.css
+++ b/packages/ui/src/components/summary-item/summary-item.module.css
@@ -29,6 +29,7 @@
   font-size: var(--size-large);
   line-height: var(--space-small);
   min-height: var(--space-small);
+  white-space: nowrap;
   font-weight: bold;
 }
 
